style.css
:root {
    --bg-color: #000000;
    --text-main: #fff;
    --text-dim: #6B7280;
    --user-color: #8ae234;
    --path-color: #79a7ec;
    --red: #bb0e0b;
    --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
}

body {
    background-color: var(--bg-color);
    color: var(--text-main);
    font-family: var(--font-mono);
    margin: 0;
    font-size: 16px;
    line-height: 1.5;
    height: 100vh;
    box-sizing: border-box;
    overflow-x: hidden;
}

/* Forces the input to stay focused even if the user clicks around the page */
main {
    display: flex;
    flex-direction: column;
    min-height: 100%;
}

#output {
    white-space: pre-wrap;
    /* Preserves spaces and line breaks */
    word-wrap: break-word;
}

.input-line {
    display: flex;
    align-items: center;
}

#prompt-prefix {
    white-space: pre;
    font-weight: semi-bold;
}

/* Styling for the prompt components */
.user-host {
    color: var(--user-color);
    font-weight: 600;
}

.path {
    color: var(--path-color);
    font-weight: bold;
}

.symbol {
    color: var(--text-main);
}

input[type="text"] {
    background: transparent;
    border: none;
    color: var(--text-main);
    font-family: inherit;
    font-size: inherit;
    outline: none;
    margin-left: 6.75px;
    margin-bottom: 1px;

    caret-color: var(--text-main);
    /* Makes the blinking cursor match */
}

/* Subtle blinking cursor effect for empty inputs */
input[type="text"]:focus::placeholder {
    color: transparent;
}

